# repo-4471-LibrePCB

./: CMakeLists.txt
apps/UuidGenerator/: CMakeLists.txt
apps/librepcb/: CMakeLists.txt  main.cpp
apps/librepcb-cli/: CMakeLists.txt  commandlineinterface.cpp  commandlineinterface.h
cmake/: FindOpenCascade.cmake
dev/doxygen/pages/: developers.md
libs/librepcb/core/: CMakeLists.txt
libs/librepcb/core/project/: projectloader.cpp
libs/librepcb/core/project/board/: board.cpp  boardairwiresbuilder.cpp  boarddesignrules.cpp  boarddesignrules.h  boardgerberexport.cpp  boardpainter.cpp  boardplanefragmentsbuilder.cpp  boardplanefragmentsbuilder.h  boardpreviewpainter.cpp  boardpreviewpainter.h
libs/librepcb/core/serialization/: fileformatmigrationv01.cpp  sexpression.cpp  sexpression.h
libs/librepcb/core/utils/: clipperhelpers.cpp  clipperhelpers.h  transform.cpp  transform.h
libs/librepcb/eagleimport/: CMakeLists.txt  eagletypeconverter.cpp
libs/librepcb/editor/: CMakeLists.txt  editorcommandset.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
libs/librepcb/editor/project/boardeditor/: boarddesignrulesdialog.cpp  boarddesignrulesdialog.ui  boardeditor.cpp  boardeditor.h  boardplanepropertiesdialog.cpp  boardplanepropertiesdialog.ui
libs/librepcb/editor/project/boardviewer/: boardviewer.cpp  boardviewer.h  boardviewer.ui
libs/librepcb/editor/widgets/: opencascadeview.cpp  opencascadeview.h
share/librepcb/qml/: MainWindow.qml  SideButton.qml  schematic.qml
tests/cli/open_project/: test_parser.py
tests/unittests/: CMakeLists.txt
(+19 files in other folders)
